- add CMake Readme  to Readme.txt - CMake don't generate project for a bad project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ INCLUDE_DIRECTORIES(./dependes/windows/include/)
 LINK_DIRECTORIES(../dependes/windows/lib/)
 FILE(GLOB_RECURSE SRC_LIST "*.cpp")
 FOREACH(src ${SRC_LIST})
-    IF(NOT (src MATCHES ".*2009-10-20.*")) 
+    IF(NOT ( (src MATCHES ".*2009-10-20.*") OR (src MATCHES ".*2009-9-28.*") ) )
         MESSAGE( ${src} Finded)
         STRING( REGEX REPLACE ".*/(.*)\\.cpp$" "\\1" prjName ${src} )
         MESSAGE( ${prjName} Added)
@@ -14,5 +14,5 @@ FOREACH(src ${SRC_LIST})
             SET_TARGET_PROPERTIES(${prjName} PROPERTIES WIN32_EXECUTABLE "true")
         ENDIF(NOT (prjName STREQUAL mvarray) )
 
-    ENDIF(NOT (src MATCHES ".*2009-10-20.*"))
+    ENDIF(NOT ( (src MATCHES ".*2009-10-20.*") AND (src MATCHES ".*2009-9-28.*") ) )
 ENDFOREACH(src)
